# agent-test

./: .gitignore  accounting.py  input.csv  main.py  output.csv  output.md  pyproject.toml
prompts/: error.md  file-prompt.md  math-prompt.md
